<resources>
    <string name="app_name">QuizPlusPlus</string>
    <string name="app_title">App Title</string>
    <string name="app_logo">App Logo</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="loremipsum_lorem_com">loremipsum@lorem.com</string>
    <string name="quiz_title">Quiz Title</string>
    <string name="type_of_quiz">Type of Quiz</string>
    <string name="true_false">True / False</string>
    <string name="multiple_choice">Multiple Choice</string>
    <string name="identification">Identification</string>
    <string name="no_of_question">No. of Item:</string>
    <string name="_0">0</string>
    <string name="createbar">CreateBar</string>
    <string name="sign_up">Create Account</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="home">Home</string>
    <string name="quizzes">Quizzes</string>
    <string name="account">Account</string>
    <string name="quiz_archive">Quiz Archive</string>
    <string name="create_a_quiz">Create a Quiz</string>
    <string name="enter_keyword_here">Search Quiz</string>
    <string name="_10">10</string>
    <string name="java_programming">Java Programming</string>
    <string name="l4uicgfxlcf5lru2y3d">-L4UIcGFXlcF5LRU2y3d</string>
    <string name="question_1">Question #1</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipi_cing_elit_sed_do_eiusmod_tempor">Lorem ipsum dolor sit amet, consectetur adipi cing elit, sed do eiusmod tempor?</string>
    <string name="choices">Choices:</string>
    <string name="answertrue">True</string>
    <string name="answerfalse">False</string>
    <string name="check_results">Check Results</string>
    <string name="end_quiz">End Quiz</string>
    <string name="full_name">Full Name</string>
    <string name="birthdate_mm_dd_yyyy">Birthdate - mm/dd/yyyy</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update_information">Update Information</string>
    <string name="email">Email</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="change_password_optional">Change Password: (Optional)</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="retyped_new_password">Retyped New Password</string>
    <string name="lorem_ipsum_title">Lorem Ipsum Title</string>
    <string name="description">Description</string>
    <string name="lorem_ipsum_donor">Lorem ipsum dolor sit amet, consectetur adipi cing elit, sed do eiusmod tempor incididunt ut abore et dolore magna aliqua. Ut enim ad mini veniam, quis nostrud exercitation ullamco labo</string>
    <string name="quiz_type">Quiz Type:</string>
    <string name="true_or_false">True or False</string>
    <string name="creator">Creator:</string>
    <string name="lorem_gmail_com">lorem@gmail.com</string>
    <string name="x">X</string>
    <string name="question">Question</string>
    <string name="put_the_question_here">Put the question here</string>
    <string name="a">A =</string>
    <string name="b">B =</string>
    <string name="c">C =</string>
    <string name="d">D =</string>
    <string name="user_choice_1">User Choice #1</string>
    <string name="user_choice_2">User Choice #2</string>
    <string name="user_choice_3">User Choice #3</string>
    <string name="user_choice_4">User Choice #4</string>
    <string name="answer">Answer</string>
    <string name="_00000">#00000</string>
    <string name="this_is_a_sample_quiz_description">This is a sample quiz description</string>
    <string name="title_activity_quiz_online">QuizOnlineActivity</string>

    <string-array name="timers">
        <item>10 secs</item>
        <item>20 secs</item>
        <item>30 secs</item>
        <item>40 secs</item>
        <item>60 secs</item>
        <item>90 secs</item>
        <item>120 secs</item>
    </string-array>


</resources>
