<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/QuestionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#923232"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/txtQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/arimo"
                android:text="@string/question"
                android:textColor="@color/lightgray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/txtScore"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/txtQuestion"
                android:layout_below="@+id/txtQuestion"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/arimo"
                android:hint="@string/put_the_question_here"
                android:inputType="textMultiLine|textLongMessage"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/lightgray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtQuizDesc"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/txtScore"
                android:layout_below="@+id/txtScore"
                android:fontFamily="@font/arimo"
                android:text="@string/choices"
                android:textColor="@color/lightgray"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnDeleteThisQuestion"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignBottom="@+id/txtQuizDesc"
                android:layout_marginStart="17dp"
                android:layout_toEndOf="@+id/txtScore"
                android:background="@drawable/deleteicon" />

            <RadioGroup
                android:id="@+id/rgAnswerChoices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/txtQuizDesc"
                android:layout_below="@+id/btnDeleteThisQuestion"
                android:layout_marginTop="11dp">

                <RadioButton
                    android:id="@+id/rbChoiceA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/whitesmoke"
                    android:text="@string/a"
                    android:textColor="@color/whitesmoke" />

                <RadioButton
                    android:id="@+id/rbChoiceB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/whitesmoke"
                    android:text="@string/b"
                    android:textColor="@color/whitesmoke" />

                <RadioButton
                    android:id="@+id/rbChoiceC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/whitesmoke"
                    android:text="@string/c"
                    android:textColor="@color/whitesmoke" />

                <RadioButton
                    android:id="@+id/rbChoiceD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/whitesmoke"
                    android:text="@string/d"
                    android:textColor="@color/whitesmoke" />

            </RadioGroup>

            <EditText
                android:id="@+id/etChoiceA"
                android:layout_width="230dp"
                android:layout_height="36dp"
                android:layout_alignTop="@+id/rgAnswerChoices"
                android:layout_toEndOf="@+id/txtQuestion"
                android:backgroundTint="@color/whitesmoke"
                android:ems="10"
                android:hint="@string/user_choice_1"
                android:inputType="textPersonName"
                android:paddingStart="5dp"
                android:textColor="@color/whitesmoke"
                android:textColorHint="#A6A6A6"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/etChoiceB"
                android:layout_width="230dp"
                android:layout_height="36dp"
                android:layout_alignStart="@+id/etChoiceA"
                android:layout_below="@+id/etChoiceA"
                android:backgroundTint="@color/whitesmoke"
                android:ems="10"
                android:hint="@string/user_choice_2"
                android:inputType="textPersonName"
                android:paddingStart="5dp"
                android:textColor="@color/whitesmoke"
                android:textColorHint="#A6A6A6"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/etChoiceC"
                android:layout_width="230dp"
                android:layout_height="36dp"
                android:layout_alignStart="@+id/etChoiceB"
                android:layout_below="@+id/etChoiceB"
                android:backgroundTint="@color/whitesmoke"
                android:ems="10"
                android:hint="@string/user_choice_3"
                android:inputType="textPersonName"
                android:paddingStart="5dp"
                android:textColor="@color/whitesmoke"
                android:textColorHint="#A6A6A6"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/etChoiceD"
                android:layout_width="230dp"
                android:layout_height="36dp"
                android:layout_alignBottom="@+id/rgAnswerChoices"
                android:layout_alignStart="@+id/etChoiceC"
                android:backgroundTint="@color/whitesmoke"
                android:ems="10"
                android:hint="@string/user_choice_4"
                android:inputType="textPersonName"
                android:paddingStart="5dp"
                android:textColor="@color/whitesmoke"
                android:textColorHint="#A6A6A6"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>